* Add rotation during meta

DRUID: 
* replace swipe to swipe_bear again (different id's after 8.2.0)
* we can remove corruption in bear form now, so no longer need to check if we're not.

PALADIN: 
* swap AW and Seraphim
* can use bubble when solo
* swap aegis of light
* AOE rotation - HOTS when consecration is up (or with blessed hammer)
* use consecration when in range

820.19
------
ALL:
* Update toc

815.18
------
ALL:
* Fix for using consumables, need an update of Ovale to make this effective

DRUID:
* replace swipe_bear with swipe

MONK:
* Add RJW as fallback, when there is nothing else to cast
* Only suggest TP when KS is on cooldown

WARRIOR:
* don't recommend charge for huge bosses when already in melee range
* don't shockwave as part of the rotation
* demo shout is important

815.17
------
DRUID:
* Be a little less strict when trying to maintain earthwarden (from less then 3 to at least 1)

MONK:
* Apply BoF debuff ASAP in single target situation

PALADIN:
* Add a SpellKnown(rebuke) condition for range check for low level paladins
* enable Interrupt actions when Casting() and not only when IsInterruptible()

810.16
------
DH:
* fracture when soul barrier is up to generate more souls in order to refresh the shield

810.15
------
DH:
* without facture, spirit bomb at 5 stacks or when it's not up

WARRIOR:
* try to prevent wasting shield block by not casting it when it's up

810.14
------
ALL:
* update to 8.1.0
 
DH:
* Can stack Sigil of Flame
* Cast Sigil of Flames only when target lives to see the first tick
* try to prevent wasting DS by not casting it when it's up
* some optimizations for Feed the Demon talent

Druid:
* Incapacitating Roar got removed

801.13
------
DK:
* Pool RP when bonestorm is about to come of cd

DRUID:
* prevent suggesting ironfur when already up, unless close to capping rage

MONK:
* Attempt to purify more often (based on available charges)

WARRIOR:
* fix spell id for ravager

801.12
------
* fix issue with Curse package manager
